# a9s

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  a9s.spec  cli.js  debug-alt-backspace.js  debug-alt-backspace.mjs  main.py  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test-alt-backspace.js  tsconfig.json  vitest.config.ts
.claude/skills/a9s-release/: SKILL.md
.github/: release-drafter.yml
.github/workflows/: bundler.yaml  ci.yaml  draft_release.yaml  publish.yaml  publish_docker.yaml  publish_npm.yaml  publish_pypi.yaml
a9s/: __init__.py  app.py  main.py  scratch
a9s/aws_resources/: base_service.py  dynamodb.py  help.py  hud.py  loader.py  logo.py  route53.py  s3.py  services.py  utils.py
a9s/components/: app.py  autocomplete.py  custom_string.py  keys.py  logger.py  mode.py  renderer.py  table.py  utils.py
a9s/v2_aws_resources/: base_service.py  logo.py  route53.py  services.py
a9s/v2_components/: List.py  Table.py  autocomplete.py  hud.py  loader.py  mode.py  services.py
aws_resources/: hud.py  route53.py  s3.py  services.py
components/: app.py  autocomplete.py  custom_string.py  logger.py  mode.py  renderer.py  table.py
docker/: docker-compose.yml
mocked_env/: Dockerfile  docker-compose.yaml  dynamodb.py  main.py  route53.py  s3.py
scripts/: add-shebang.js  create-pr.sh  merge-if-ci-passes.sh  release-draft.sh  release-workflow.sh  seed.ts
src/: App.tsx  index.tsx  services.ts  types.ts
src/adapters/: ServiceAdapter.ts  backStackUtils.ts
src/adapters/capabilities/: ActionCapability.ts  DetailCapability.ts  EditCapability.ts  PreviewCapability.ts  YankCapability.test.ts  YankCapability.ts
src/components/: AdvancedTextInput.test.ts  AdvancedTextInput.tsx  AutocompleteInput.tsx  DetailPanel.tsx  DiffViewer.tsx  ErrorStatePanel.tsx  FilePreviewPanel.tsx  HUD.tsx  HelpPanel.tsx  HistogramPanel.tsx  ModeBar.tsx  SearchHistoryDropdown.tsx  TableSkeleton.tsx  YankHelpPanel.tsx
src/components/Table/: index.tsx  widths.ts
src/constants/: commands.ts  keybindings.ts  keys.ts  theme.ts
src/contexts/: ThemeContext.tsx
src/features/: AppMainView.integration.test.tsx  AppMainView.tsx
src/hooks/: inputEvents.ts  mainInputScopes.test.ts  mainInputScopes.ts  useActionController.ts  useAdapterStack.ts  useAppController.test.ts  useAppController.ts  useAppData.ts  useAwsContext.ts  useAwsProfiles.ts  useAwsRegions.ts  useCommandRouter.test.ts  useCommandRouter.ts  useDetailController.test.ts  useDetailController.ts  useFetchFlow.ts  useFilePreview.ts  useHelpPanel.ts  useHierarchyState.ts  useInputEventProcessor.test.ts  useInputEventProcessor.ts  useKeyChord.ts  useMainInput.ts  useNavigation.ts  usePendingAction.ts  usePickerManager.ts  usePickerState.ts  usePickerTable.ts  useServiceView.ts  useTableLayout.ts  useTimedFeedback.ts  useUiHints.ts  useYankMode.ts  yankHeaderMarkers.test.ts  yankHeaderMarkers.ts
src/state/: atoms.ts
src/testing/: keyFixtures.ts
src/utils/: ageBanding.ts  aws.ts  bookmarks.ts  config.ts  consoleUrl.ts  createStackState.ts  debugLogger.ts  errorHelpers.ts  heatmap.ts  histogram.ts  layoutBudget.ts  rowUtils.ts  scrollUtils.ts  searchHistory.ts  secretDisplay.ts  statusColors.ts  textUtils.ts  withFullscreen.tsx
(+167 files in other folders)
