[tool.poetry]
name = "a9s"
version = "0"  # this means version is development
description = "Cli tool for navigation in Amazon AWS services. Highly inspired from k9s"
readme = "README.md"
authors = ["Elran Shefer <elran777@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Environment :: Console :: Curses",
]
packages = [
    { include = "a9s" },
]
homepage = "https://github.com/IamShobe/a9s"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
blessed = "^1.18.0"
colored = "^1.4.2"
pyperclip = "^1.8.2"
cached-property = "^1.5.2"
boto3 = "^1.26.136"
attrdict = "^2.0.1"
pyinstaller = "^5.11.0"
pydash = "^7.0.3"
tepy = {git = "https://github.com/IamShobe/tepy.git"}
boto3-stubs-lite = {extras = ["all"], version = "^1.26.137"}

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.8"
moto = {extras = ["server"], version = "^4.1.9"}
python-jose = "^3.3.0"
Faker = "^8.9.0"
flask = "^2.3.2"
flask-cors = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
a9s = 'a9s.main:main'
